--- a/netlify.toml
+++ b/netlify.toml
@@ -8,6 +8,7 @@
 
 [build.environment]
   NODE_VERSION = "18"
+  NODE_ENV = "development"
 
 [context.production.environment]
   NODE_ENV = "production"
