--- a/package.json
+++ b/package.json
@@ -12,10 +12,10 @@
     "@react-three/fiber": "^8.18.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
-    "three": "^0.156.1"
+    "three": "^0.156.1",
+    "vite": "^4.5.13"
   },
   "devDependencies": {
-    "@vitejs/plugin-react": "^4.0.4",
-    "vite": "^4.5.13"
+    "@vitejs/plugin-react": "^4.0.4"
   }
 }
